# TavernTroupeDiscordBot

./: .gitignore  README.md  app.py  config.yml  drlogger.py  fun.py  idea.py  music.py  persist.py  photos.py  pyproject.toml  reminders.py  tweets.py  util.py
.github/workflows/: deploy.yml
tt/: function.conf  highlight.conf  prompt.conf
tt/temp/: README
